[tool.poetry]
name = "unreal-dissection"
version = "0.0.0"
description = "Extracts detailed metadata from Unreal Engine games using static analysis."
authors = ["coldino <28345893+coldino@users.noreply.github.com>"]
repository = "https://github.com/coldino/unreal_dissection"
readme = "README.md"
packages = [{include = "unreal_dissection", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
dataclasses-struct = {git = "https://github.com/coldino/dataclasses-struct.git"}
iced-x86 = "^1.20.0"
lief = {version = "^0.14.0.dev0", source = "lief-dev"}
typed-argparse = "^0.3.0"
tqdm = "^4.66.1"
py7zr = {version = "^0.20.6", optional = true}

[tool.poetry.extras]
7zip = ["py7zr"]

[[tool.poetry.source]]
name = "lief-dev"
url = "https://lief.s3-website.fr-par.scw.cloud/latest"
priority = "explicit"


[[tool.poetry.source]]
name = "PyPI"
priority = "default"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.287"
pytest = "^7.4.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
src = ["src"]
select = ['E', 'F', 'UP', 'I', 'N', 'YTT', 'ASYNC', 'S', 'FBT', 'B', 'A', 'COM', 'C4', 'T10', 'FA', 'ISC', 'G', 'INP', 'PYI', 'PT', 'Q', 'RSE', 'RET', 'SLF', 'SLOT', 'SIM', 'TCH', 'ARG', 'PTH', 'FIX', 'ERA', 'PL', 'FLY', 'PERF', 'FURB', 'RUF']
ignore = ['S101', 'A003', 'C408', 'RET504', 'PLR2004', 'TRY003']
unfixable = ['ERA','F841']
line-length = 127

[tool.ruff.flake8-quotes]
inline-quotes = 'single'
docstring-quotes = 'single'
avoid-escape = true
multiline-quotes = 'double'

[tool.pyright]
pythonVersion = 3.12

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
addopts = ["--doctest-modules"]
